<resources>
    <string name="app_name">Fix It</string>
    <string name="open">Fix It</string>
    <string name="close">Fix It</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preview_results">Results</string>
    <string name="retry">Retry</string>
    <string name="create_a_concern">create a concern</string>
    <string name="password_match">Password match...</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_does_not_match">Password does not match...</string>
    <string name="at_least_1_upper_case">At least 1 upper case</string>
    <string name="at_least_1_lower_case">At least 1 lower case</string>
    <string name="at_least_1_number">At least 1 number</string>
    <string name="at_least_8_characters">At least 8 characters</string>
    <string name="new_password">New password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="name">Name</string>
    <string name="mame_cannot_be_empty">Name cannot be empty</string>
    <string name="sign_out">Sign Out</string>
    <string name="complete_tasks">Complete tasks</string>
    <string name="tasks">Tasks</string>
    <string name="notifications">Notifications</string>
    <string name="my_profile">My Profile</string>
    <string name="scan">Scan</string>
    <string name="start_scanning">Start scanning</string>
    <string name="date_type">DD-MM-YYYY</string>
    <string name="tshwane_account_number_hint">Tshwane account number</string>
    <string name="city_s_account_no">City\'s Account No. :</string>
    <string name="fix_date">Fix date :</string>
    <string name="alt_contact">Alt Contact :</string>
    <string name="alternative_contact">Alternative Contact</string>
    <string name="type">Type:</string>
    <string name="above_ground">Above ground</string>
    <string name="underground">Underground</string>
    <string name="submit">submit</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="do_not_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="useremail">User: userEmail@fixit.gov</string>
    <string name="user">User :</string>
    <string name="user_email_hint">userEmail@fixit.gov</string>
    <string-array name="arr_location">
        <item>Public</item>
        <item>Yard</item>
    </string-array>
</resources>