<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateConcernActivity">

   <include android:id="@+id/toolbar"
       layout="@layout/toolbar"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/smoke_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <!--                <TextView-->
                <!--                    android:id="@+id/textView"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:layout_weight="1"-->
                <!--                    android:gravity="center"-->
                <!--                    android:text="create a new concern"-->
                <!--                    android:textColor="@color/dark_green"-->
                <!--                    android:textSize="28sp"-->
                <!--                    android:textStyle="bold" />-->

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0"
                    android:backgroundTint="@color/peach"
                    app:srcCompat="@drawable/ic_camera" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingStart="15dp">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0"
                    android:text="@string/city_s_account_no"
                    android:textColor="@color/dark_green" />

                <EditText
                    android:id="@+id/city_account_number"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/bottom_line"
                    android:ems="10"
                    android:hint="@string/tshwane_account_number_hint"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingStart="15dp">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0"
                    android:text="@string/fix_date"
                    android:textColor="@color/dark_green" />

                <EditText
                    android:id="@+id/fix_date"
                    android:layout_width="174dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/bottom_line"
                    android:drawablePadding="8dp"
                    android:hint="@string/date_type"
                    android:importantForAutofill="no"
                    android:inputType="datetime"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/fix_date_picker"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    android:background="@drawable/image_button_background"
                    android:onClick="openDatePicker"
                    android:src="@drawable/ic_calendar_today" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingStart="15dp">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0"
                    android:text="@string/alt_contact"
                    android:textColor="@color/dark_green" />

                <EditText
                    android:id="@+id/contact"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/bottom_line"
                    android:ems="10"
                    android:hint="@string/alternative_contact"
                    android:inputType="number"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/bottom_line"
                android:orientation="vertical"
                android:paddingStart="15dp">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0"
                    android:text="@string/type"
                    android:textColor="@color/dark_green" />


                <RadioGroup
                    android:id="@+id/selection_type"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="0"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_above_ground"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:text="@string/above_ground" />

                    <RadioButton
                        android:id="@+id/rb_underground"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/underground" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/bottom_line"
                android:orientation="vertical"
                android:paddingStart="15dp">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="0"
                    android:text="Location :"
                    android:textColor="@color/dark_green" />

                <Spinner
                    android:id="@+id/spinner_location"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="0" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/lime_green"
                    android:onClick="onClickSubmit"
                    android:text="@string/submit" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#BEFE8700"
                    android:onClick="onClickCancel"
                    android:text="@string/cancel" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>