<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lime_green"
    tools:context=".ProfileActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="50dp"
            android:padding="10dp"
            app:cardCornerRadius="20dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:background="@color/smoke_green"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:visibility="gone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/bottom_line"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:padding="10dp"
                            android:text="@string/name"
                            android:textColor="@color/dark_green"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/edit_profile_name"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:hint="Enter your full name"
                            android:textAlignment="textEnd"
                            android:textColor="@color/dark_green"
                            android:textSize="14sp"
                            android:inputType="textPersonName"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/bottom_line"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:padding="10dp"
                            android:text="Contact"
                            android:textColor="@color/dark_green"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/edit_profile_contact"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:hint="000-000-0000"
                            android:ems="10"
                            android:inputType="phone"
                            android:textAlignment="textEnd"
                            android:textColor="@color/dark_green"
                            android:textSize="14sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/bottom_line"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:padding="10dp"
                            android:text="Date of birth"
                            android:textColor="@color/dark_green"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/profile_dob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:padding="10dp"
                            android:gravity="end"
                            android:hint="@string/date_type"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:textSize="16sp" />

                        <ImageButton
                            android:id="@+id/dob_date_picker"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_weight="0"
                            android:background="@drawable/image_button_background"
                            android:src="@drawable/ic_calendar_today" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/bottom_line"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:padding="10dp"
                            android:text="Email"
                            android:textColor="@color/dark_green"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/edit_profile_email"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:gravity="center_vertical"
                            android:textAlignment="textEnd"
                            android:drawableEnd="@drawable/ic_complete_tasks"
                            android:drawablePadding="5dp"
                            android:text="@string/user_email_hint"
                            android:textColor="@color/dark_green"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="18dp"
                        android:background="@drawable/clickable_peach_button"
                        android:onClick="editProfile"
                        android:text="Update Profile" />

                </LinearLayout>

            </ScrollView>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>